# AnalisadorProdu-o

./: .gitignore  DejaVuSans.pkl  INSTRUCOES_EXECUTAVEL.md  README.md  analisador.spec  build_executavel.py  main.py  pyproject.toml  requirements.txt  setup.py
config/: setup_config.py
data/: data_handler.py  group_manager.py  performance_bobst.py  performance_calculator.py  performance_komori.py
data/metrics/: agrupamento.py  relatorio.py  utils.py
extrator/: caminhos.py  extrator_pdf.py
interface/: formatters.py  globals.py  table_manager.py  terminal_panel.py  ui_setup.py  visual_layout.py
src/: __init__.py  main.py
src/core/: __init__.py
src/core/config/: setup_config.py
src/core/data/: __init__.py  data_processor.py  group_manager.py
src/core/extractor/: __init__.py  file_finder.py  pdf_extractor.py
src/core/metrics/: calculator.py  utils.py
src/core/metrics/maquinas/: __init__.py  bobst.py  cv_guangya.py  cv_manual.py  furnax.py  hcd.py  heidelberg.py  komori.py  laminadora.py  sakurai.py  samkoon.py  sbl.py  (+1 more)
src/data/: __init__.py
src/interface/: __init__.py  globals.py
src/interface/components/: __init__.py  main_window.py  table.py  terminal.py  toolbar.py
src/interface/dialogs/: __init__.py
src/interface/handlers/: __init__.py  config_handler.py  data_handler.py  event_handler.py  formatters.py  group_handler.py  table_handler.py
src/interface/utils/: __init__.py  formatters.py  globals.py  header_generator.py
src/models/: __init__.py
src/services/: __init__.py
src/utils/: __init__.py  formatters.py  validators.py
(+10 files in other folders)
