[tool.poetry]
name = "analisador-producao"
version = "1.0.0"
description = "Sistema de análise de produção para processamento de relatórios de máquinas"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.0"
pdfplumber = "^0.11.7"
numpy = "^2.3.0"
tk = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3
